# baccarat

./: .gitignore  Cargo.toml  README.md  build_assistant.ps1  sample_config.yml
baccarat/: Cargo.toml
baccarat/src/: calculation.rs  card.rs  game.rs  lib.rs
baccarat/src/game/: hands.rs
baccarat_assistant/: Cargo.toml  README.md  index.html  index.scss
baccarat_assistant/src/: decks_edit.rs  help.rs  insights.rs  main.rs  undolist.rs
baccarat_drivers/: Cargo.toml
baccarat_drivers/src/: lib.rs
baccarat_drivers/src/baccarat_simulator/: main.rs  simulation.rs
baccarat_drivers/src/baccarat_solver_service/: main.rs
