[package]
name = "baccarat_assistant"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baccarat = { path = "../baccarat" }
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-storage = "0.2"
gloo-console = "0.2"
gloo-net = "0.2"
gloo-timers = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
