[package]
name = "baccarat_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "baccarat_drivers_lib"
path = "src/lib.rs"

[[bin]]
name = "baccarat_simulator"
path = "src/baccarat_simulator/main.rs"

[dependencies]
