[package]
name = "baccarat_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "baccarat_drivers_lib"
path = "src/lib.rs"

[[bin]]
name = "baccarat_simulator"
path = "src/baccarat_simulator/main.rs"

[dependencies]
baccarat = { path = "../baccarat" }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
home = "0.5"
